--- a/app/src/main/res/layout/activity_mostrar_ciudades.xml
+++ b/app/src/main/res/layout/activity_mostrar_ciudades.xml
@@ -8,8 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ciudades"
-        android:layout_width="325dp"
-        android:layout_height="408dp"
+        android:layout_width="334dp"
+        android:layout_height="352dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
@@ -35,15 +35,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_plus"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginBottom="32dp"
+        android:contentDescription="@string/descripcion_plus"
         android:onClick="nuevaCiudad"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.864"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/plus" />
+
+    <ImageView
+        android:id="@+id/img_reload"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:contentDescription="@string/descripcion_reload"
+        android:onClick="refrescarCiudades"
+        app:layout_constraintBottom_toBottomOf="@+id/img_plus"
+        app:layout_constraintEnd_toStartOf="@+id/img_plus"
+        app:layout_constraintTop_toTopOf="@+id/img_plus"
+        app:srcCompat="@drawable/reload" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
